# feeder-mqtt

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
deployment/: Dockerfile
feeder/: logs.py  main.py  settings.py
feeder/connections/: mqtt.py
feeder/schemas/: error.py  subscription_status.py  topic_init.py  watchdog.py
feeder/subcriptions/: main_subscription.py
feeder/subcriptions/threaded/: topic_subscription.py  watchdog.py
